Thu Oct 29 08:48:05 2015  Eric Wong  <e@80x24.org>

	* variable.c (struct autoload_data_i): add waitq_head
	  (struct autoload_state): new struct
	  (autoload_require): save result in autoload_state for use
	    in autoload_reset
	  (autoload_reset): wake up other waiters with open-coded
	    wait-queues
	  (rb_autoload_load): add ensure autoload_const_set happens
	    atomically w.r.t. autoload-triggered "require"
	  [ruby-core:70075] [ruby-core:71239] [Bug #11384]

Wed Oct 29 00:39:50 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* test/rubygems/test_gem_commands_server_command.rb
	  (test_handle_options_port): change port from http to discard.
	  Solaris does not include "http 80/tcp" in its default
	  /etc/inet/services. AFAIK, discard (9/tcp) is older than http
	  and it is expected that all OS can resolve the service name.
	  [Bug #10004] [ruby-core:63518]

Wed Oct 28 23:52:48 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* probes_helper.h (RUBY_DTRACE_HOOK): add RB_GC_GUARD, though paranoic.

Wed Oct 28 15:36:11 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_name_err_new): store the receiver directly.

	* error.c (name_err_receiver): return directly stored receiver.
	  [Feature #10881]

	* error.c (name_err_mesg_to_str): quote the name if unprintable.

	* object.c (check_setter_id): use rb_check_id to convert names.

	* variable.c (uninitialized_constant): use NameError::message to
	  keep the receiver of uninitialized constant.  [Feature #10881]

	* error.c (rb_name_err_new): new function to create NameError
	  exception instance.  [Feature #10881]

Wed Oct 28 13:29:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (new_attr_op_assign): fix op_assign type, which is
	  already an ID since r52284.  [Feature #11537]

Tue Oct 27 23:14:14 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def: enable anonymous IDs not to expose internal IDs for
	  frozen-string-literal-debug by Marshal.dump.
